# Lightweight-TEE-Controller

./: README.md
julia/: Project.toml  cost_ball_and_beam.jl  cost_results_ree.csv  ree_exp_000.csv  ree_exp_025.csv  ree_exp_050.csv  ree_exp_075.csv  ree_exp_100.csv  ree_exp_125.csv  results_ree_costs.csv  results_tee_costs.csv  tee_exp_I.csv  tee_exp_II.csv  tee_exp_III.csv
non_secure_ball_and_beam/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
non_secure_ball_and_beam/boards/: nrf5340dk_nrf5340_cpuapp.overlay
non_secure_ball_and_beam/src/: lqg_variables.h  main.c  serial2002.c  serial2002.h
secure_ball_and_beam/: CMakeLists.txt  README.rst  clean-build.sh  compile.sh  flash.sh  prj.conf  sample.yaml
secure_ball_and_beam/secure_controller/: CMakeLists.txt  secure_controller.c  secure_timer.c  secure_timer.h  serial2002.c  serial2002.h  tfm_manifest_list.yaml.in  tfm_secure_controller.yaml
secure_ball_and_beam/src/: main.c
